--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 bytes = "1.6.0"
 futures = "0.3.30"
+mini-redis = "0.4.1"
 tokio = { version = "1.37.0", features = ["full"] }
